salesforce-dedupe/force-app/main/default/objects/Dedupe_Setting__mdt/Dedupe_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Dedupe Setting</label>
    <pluralLabel>Dedupe Settings</pluralLabel>
    <description>Runtime switches for the dedupe automation. The batch reads the record named "Default". Ships with Dry Run ON and Auto Merge OFF.</description>
</CustomObject>