salesforce-dedupe/force-app/main/default/objects/Dedupe_Setting__mdt/fields/Account_Id_Points_Required__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_Points_Required__c</fullName>
    <label>Account ID Points Required</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>