salesforce-dedupe/force-app/main/default/objects/Dedupe_Setting__mdt/fields/Auto_Merge_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Merge_Enabled__c</fullName>
    <label>Auto Merge Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>