salesforce-dedupe/force-app/main/default/objects/Dedupe_Setting__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>