salesforce-dedupe/force-app/main/default/objects/Dedupe_Setting__mdt/fields/Dry_Run__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run__c</fullName>
    <label>Dry Run</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>