salesforce-dedupe/force-app/main/default/objects/Dedupe_Setting__mdt/fields/Fill_Master_Blanks__c.field-meta.xml
<CustomField>
    <fullName>Fill_Master_Blanks__c</fullName>
    <label>Fill Master Blanks</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>