salesforce-dedupe/force-app/main/default/objects/Dedupe_Setting__mdt/fields/Max_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Group_Size__c</fullName>
    <label>Max Group Size</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>