salesforce-dedupe/force-app/main/default/objects/Dedupe_Setting__mdt/fields/Max_Merges_Per_Run__c.field-meta.xml
<CustomField>
    <fullName>Max_Merges_Per_Run__c</fullName>
    <label>Max Merges Per Run</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>